[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/gut/gui/ShortcutButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/gut/gui/BottomPanelShortcuts.gd" type="Script" id=2]

[node name="BottomPanelShortcuts" type="WindowDialog"]
visible = true
anchor_right = 0.234
anchor_bottom = 0.328
margin_left = 392.0
margin_top = 201.0
margin_right = 475.384
margin_bottom = 238.2
popup_exclusive = true
window_title = "Shortcuts"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Layout"]
margin_right = 323.0
margin_bottom = 31.0
text = "Shortcuts will not work if the GUT Panel is not visible."
align = 1
autowrap = true

[node name="CRunAll" type="HBoxContainer" parent="Layout"]
margin_top = 35.0
margin_right = 323.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Layout/CRunAll"]
margin_right = 50.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 7
text = "Run All"
valign = 1

[node name="ShortcutButton" parent="Layout/CRunAll" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 323.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="CRunCurrentScript" type="HBoxContainer" parent="Layout"]
margin_top = 64.0
margin_right = 323.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="Layout/CRunCurrentScript"]
margin_right = 115.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 7
text = "Run Current Script"
valign = 1

[node name="ShortcutButton" parent="Layout/CRunCurrentScript" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 119.0
margin_right = 323.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="CRunCurrentInner" type="HBoxContainer" parent="Layout"]
margin_top = 93.0
margin_right = 323.0
margin_bottom = 118.0

[node name="Label" type="Label" parent="Layout/CRunCurrentInner"]
margin_right = 150.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 7
text = "Run Current Inner Class"
valign = 1

[node name="ShortcutButton" parent="Layout/CRunCurrentInner" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 154.0
margin_right = 323.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="CRunCurrentTest" type="HBoxContainer" parent="Layout"]
margin_top = 122.0
margin_right = 323.0
margin_bottom = 147.0

[node name="Label" type="Label" parent="Layout/CRunCurrentTest"]
margin_right = 106.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 7
text = "Run Current Test"
valign = 1

[node name="ShortcutButton" parent="Layout/CRunCurrentTest" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_right = 323.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Layout"]
margin_top = 151.0
margin_right = 323.0
margin_bottom = 165.0
text = "Show/Hide GUT panel.  Works all the time."
align = 1
autowrap = true

[node name="CPanelButton" type="HBoxContainer" parent="Layout"]
margin_top = 169.0
margin_right = 323.0
margin_bottom = 194.0

[node name="Label" type="Label" parent="Layout/CPanelButton"]
margin_right = 66.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 7
text = "GUT Panel"
valign = 1

[node name="ShortcutButton" parent="Layout/CPanelButton" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 323.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="CenterContainer2" type="CenterContainer" parent="Layout"]
margin_top = 198.0
margin_right = 323.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Layout"]
margin_top = 202.0
margin_right = 323.0
margin_bottom = 222.0

[node name="CenterContainer" type="CenterContainer" parent="Layout/HBoxContainer"]
margin_right = 273.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hide" type="Button" parent="Layout/HBoxContainer"]
margin_left = 277.0
margin_right = 323.0
margin_bottom = 20.0
text = "Done"

[node name="CenterContainer" type="CenterContainer" parent="Layout"]
margin_top = 226.0
margin_right = 323.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[connection signal="pressed" from="Layout/HBoxContainer/Hide" to="." method="_on_Hide_pressed"]
